--- a/Assurance questions.ipynb
+++ b/Assurance questions.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'LR_raw' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-94a72f03d77b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mts_raw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./data/analysis_data_test.csv\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mskiprows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mLR_raw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'LR_raw' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -234,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,13 +231,199 @@
        "(1048575, 9)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ts_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1048575 entries, 0 to 1048574\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                               Non-Null Count    Dtype  \n",
+      "---  ------                               --------------    -----  \n",
+      " 0   marketing_source                     1048575 non-null  object \n",
+      " 1   shopper_creation_timestamp_pst       1048575 non-null  object \n",
+      " 2   shopper_id                           1048575 non-null  int64  \n",
+      " 3   number_calls_answered                1048575 non-null  int64  \n",
+      " 4   number_calls_longer_than_200seconds  1048575 non-null  int64  \n",
+      " 5   partner_revenue                      1048575 non-null  float64\n",
+      " 6   marketing_cost                       1048575 non-null  float64\n",
+      " 7   policies_submitted                   1048575 non-null  int64  \n",
+      " 8   policy_value                         1048575 non-null  float64\n",
+      "dtypes: float64(3), int64(4), object(2)\n",
+      "memory usage: 72.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "ts_raw.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "floats=['number_calls_answered','number_calls_longer_than_200seconds','partner_revenue','marketing_cost','policies_submitted','policy_value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number_calls_answered</th>\n",
+       "      <th>number_calls_longer_than_200seconds</th>\n",
+       "      <th>partner_revenue</th>\n",
+       "      <th>marketing_cost</th>\n",
+       "      <th>policies_submitted</th>\n",
+       "      <th>policy_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1048575.00</td>\n",
+       "      <td>1048575.00</td>\n",
+       "      <td>1048575.00</td>\n",
+       "      <td>1048575.00</td>\n",
+       "      <td>1048575.00</td>\n",
+       "      <td>1048575.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>5.49</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>6.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>76.62</td>\n",
+       "      <td>41.92</td>\n",
+       "      <td>5.76</td>\n",
+       "      <td>12.72</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>81.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-194.64</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.29</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>78414.00</td>\n",
+       "      <td>42917.00</td>\n",
+       "      <td>180.57</td>\n",
+       "      <td>6879.22</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>12767.14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       number_calls_answered  number_calls_longer_than_200seconds  \\\n",
+       "count             1048575.00                           1048575.00   \n",
+       "mean                    1.25                                 0.15   \n",
+       "std                    76.62                                41.92   \n",
+       "min                     0.00                                 0.00   \n",
+       "25%                     0.00                                 0.00   \n",
+       "50%                     1.00                                 0.00   \n",
+       "75%                     2.00                                 0.00   \n",
+       "max                 78414.00                             42917.00   \n",
+       "\n",
+       "       partner_revenue  marketing_cost  policies_submitted  policy_value  \n",
+       "count       1048575.00      1048575.00          1048575.00    1048575.00  \n",
+       "mean              2.07            5.49                0.01          6.33  \n",
+       "std               5.76           12.72                0.12         81.93  \n",
+       "min            -194.64            0.00                0.00          0.00  \n",
+       "25%               0.00            0.00                0.00          0.00  \n",
+       "50%               0.00            3.10                0.00          0.00  \n",
+       "75%               2.29            8.00                0.00          0.00  \n",
+       "max             180.57         6879.22                6.00      12767.14  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this change of options is to get out of scientific notation\n",
+    "pd.set_option('display.float_format', lambda x: '%.2f' % x)\n",
+    "\n",
+    "ts_raw[floats].describe()\n"
    ]
   },
   {
