added real life examples

--- a/Linear_Programming_Examples.ipynb
+++ b/Linear_Programming_Examples.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd4eac2cf10>"
+       "<matplotlib.legend.Legend at 0x7fb876149790>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,23 +142,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pulp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instantiate the problem class, we'll name it \"My LP problem\" and we're looking for an optimal maximum so we use LpMaximize"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_lp_problem = pulp.LpProblem(\"My_LP_Problem\", pulp.LpMaximize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decision variables using the LpVariable class. In our example, x had a lower bound of 0 and y had a lower bound of 2.\n",
+    "\n",
+    "Upper bounds can be assigned using the upBound parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = pulp.LpVariable('x', lowBound=0, cat='Continuous')\n",
+    "y = pulp.LpVariable('y', lowBound=2, cat='Continuous')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The objective function and constraints are added using the += operator to our model.\n",
+    "\n",
+    "The objective function is added first, then the individual constraints."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objective function\n",
+    "my_lp_problem += 4 * x + 3 * y, \"Z\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constraints\n",
+    "my_lp_problem += 2 * y <= 25 - x\n",
+    "my_lp_problem += 4 * y >= 2 * x - 8\n",
+    "my_lp_problem += y <= 2 * x - 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pulp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a8a2163551b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpulp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pulp'"
-     ]
+     "data": {
+      "text/plain": [
+       "My_LP_Problem:\n",
+       "MAXIMIZE\n",
+       "4*x + 3*y + 0\n",
+       "SUBJECT TO\n",
+       "_C1: x + 2 y <= 25\n",
+       "\n",
+       "_C2: - 2 x + 4 y >= -8\n",
+       "\n",
+       "_C3: - 2 x + y <= -5\n",
+       "\n",
+       "VARIABLES\n",
+       "x Continuous\n",
+       "2 <= y Continuous"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pulp"
+    "my_lp_problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "\n",
+    "PuLP supports open source linear programming solvers such as CBC and GLPK, as well as commercial solvers such as Gurobi and IBM's CPLEX.\n",
+    "\n",
+    "The default solver is CBC, which comes packaged with PuLP upon installation.\n",
+    "\n",
+    "For most applications, the open source CBC from COIN-OR will be enough for most simple linear programming optimisation algorithms."
    ]
   },
   {
