--- a/useful_python_commands.ipynb
+++ b/useful_python_commands.ipynb
@@ -57,7 +57,10 @@
    "outputs": [],
    "source": [
     "print('first date: ',ts_raw['shopper_creation_timestamp_pst'].min())\n",
-    "print('last date:',ts_raw['shopper_creation_timestamp_pst'].max())"
+    "print('last date:',ts_raw['shopper_creation_timestamp_pst'].max())\n",
+    "\n",
+    "\n",
+    "\"{:.2f}\".format(X.index[i])"
    ]
   },
   {
@@ -189,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Two way tables and cross tabs\n",
+    "### Two way tables and cross tabs and heat map\n",
     "\n",
     "[here](https://pbpython.com/pandas-crosstab.html)"
    ]
