--- a/productionalizing_code/pipelines/Machine-Learning-Pipeline-Overview/Machine-Learning-Pipeline-Step1-DataAnalysis.ipynb
+++ b/productionalizing_code/pipelines/Machine-Learning-Pipeline-Overview/Machine-Learning-Pipeline-Step1-DataAnalysis.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>60</td>\n",
        "      <td>RL</td>\n",
@@ -276,7 +276,7 @@
        "      <td>208500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>20</td>\n",
        "      <td>RL</td>\n",
@@ -360,7 +360,7 @@
        "      <td>181500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>60</td>\n",
        "      <td>RL</td>\n",
@@ -444,7 +444,7 @@
        "      <td>223500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>70</td>\n",
        "      <td>RL</td>\n",
@@ -528,7 +528,7 @@
        "      <td>140000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>60</td>\n",
        "      <td>RL</td>\n",
@@ -708,14 +708,14 @@
        "4       WD        Normal     250000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load dataset\n",
-    "data = pd.read_csv('houseprice.csv')\n",
+    "data = pd.read_csv('./train.csv')\n",
     "\n",
     "# rows and columns of the data\n",
     "print(data.shape)\n",
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
