corona data changes

--- a/corona_trends_old.ipynb
+++ b/corona_trends_old.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,70 +21,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3063: DtypeWarning: Columns (2) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Timeseries:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>level</th>\n",
+       "      <th>city</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>country</th>\n",
+       "      <th>population</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>url</th>\n",
+       "      <th>...</th>\n",
+       "      <th>recovered</th>\n",
+       "      <th>active</th>\n",
+       "      <th>tested</th>\n",
+       "      <th>hospitalized</th>\n",
+       "      <th>hospitalized_current</th>\n",
+       "      <th>discharged</th>\n",
+       "      <th>icu</th>\n",
+       "      <th>icu_current</th>\n",
+       "      <th>growthFactor</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Antwerp, Flanders, Belgium</td>\n",
+       "      <td>county</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Antwerp</td>\n",
+       "      <td>Flanders</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1847486.0</td>\n",
+       "      <td>51.2485</td>\n",
+       "      <td>4.7175</td>\n",
+       "      <td>https://epistat.wiv-isp.be/</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Antwerp, Flanders, Belgium</td>\n",
+       "      <td>county</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Antwerp</td>\n",
+       "      <td>Flanders</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1847486.0</td>\n",
+       "      <td>51.2485</td>\n",
+       "      <td>4.7175</td>\n",
+       "      <td>https://epistat.wiv-isp.be/</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2020-01-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Antwerp, Flanders, Belgium</td>\n",
+       "      <td>county</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Antwerp</td>\n",
+       "      <td>Flanders</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1847486.0</td>\n",
+       "      <td>51.2485</td>\n",
+       "      <td>4.7175</td>\n",
+       "      <td>https://epistat.wiv-isp.be/</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2020-01-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Antwerp, Flanders, Belgium</td>\n",
+       "      <td>county</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Antwerp</td>\n",
+       "      <td>Flanders</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1847486.0</td>\n",
+       "      <td>51.2485</td>\n",
+       "      <td>4.7175</td>\n",
+       "      <td>https://epistat.wiv-isp.be/</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2020-01-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Antwerp, Flanders, Belgium</td>\n",
+       "      <td>county</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Antwerp</td>\n",
+       "      <td>Flanders</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1847486.0</td>\n",
+       "      <td>51.2485</td>\n",
+       "      <td>4.7175</td>\n",
+       "      <td>https://epistat.wiv-isp.be/</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         name   level city   county     state  country  \\\n",
+       "0  Antwerp, Flanders, Belgium  county  NaN  Antwerp  Flanders  Belgium   \n",
+       "1  Antwerp, Flanders, Belgium  county  NaN  Antwerp  Flanders  Belgium   \n",
+       "2  Antwerp, Flanders, Belgium  county  NaN  Antwerp  Flanders  Belgium   \n",
+       "3  Antwerp, Flanders, Belgium  county  NaN  Antwerp  Flanders  Belgium   \n",
+       "4  Antwerp, Flanders, Belgium  county  NaN  Antwerp  Flanders  Belgium   \n",
+       "\n",
+       "   population      lat    long                          url  ... recovered  \\\n",
+       "0   1847486.0  51.2485  4.7175  https://epistat.wiv-isp.be/  ...       NaN   \n",
+       "1   1847486.0  51.2485  4.7175  https://epistat.wiv-isp.be/  ...       NaN   \n",
+       "2   1847486.0  51.2485  4.7175  https://epistat.wiv-isp.be/  ...       NaN   \n",
+       "3   1847486.0  51.2485  4.7175  https://epistat.wiv-isp.be/  ...       NaN   \n",
+       "4   1847486.0  51.2485  4.7175  https://epistat.wiv-isp.be/  ...       NaN   \n",
+       "\n",
+       "  active  tested  hospitalized  hospitalized_current  discharged  icu  \\\n",
+       "0    NaN     NaN           NaN                   NaN         NaN  NaN   \n",
+       "1    NaN     NaN           NaN                   NaN         NaN  NaN   \n",
+       "2    NaN     NaN           NaN                   NaN         NaN  NaN   \n",
+       "3    NaN     NaN           NaN                   NaN         NaN  NaN   \n",
+       "4    NaN     NaN           NaN                   NaN         NaN  NaN   \n",
+       "\n",
+       "   icu_current  growthFactor       date  \n",
+       "0          NaN           NaN 2020-01-22  \n",
+       "1          NaN           1.0 2020-01-23  \n",
+       "2          NaN           1.0 2020-01-24  \n",
+       "3          NaN           1.0 2020-01-25  \n",
+       "4          NaN           1.0 2020-01-26  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import shapefile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bokeh.plotting import figure,show\n",
-    "from bokeh.models import LogColorMapper\n",
-    "from bokeh.palettes import Viridis6 as palette\n",
-    "from bokeh.plotting import figure\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bokeh\n",
-    "bokeh.sampledata.download()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bokeh.sampledata.us_counties import data as counties\n",
-    "from bokeh.sampledata.unemployment import data as unemployment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unemployment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counties"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(counties)"
+    "rawtimeseries = pd.read_csv('https://coronadatascraper.com/timeseries.csv', parse_dates=['date'])\n",
+    "\n",
+    "display('Timeseries:')\n",
+    "display(rawtimeseries.head())"
    ]
   },
   {
@@ -103,27 +270,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from bokeh.io import output_notebook"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "palette = tuple(reversed(palette))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_notebook()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -135,7 +289,7 @@
     "county_ys = [county[\"lats\"] for county in counties.values()]\n",
     "\n",
     "county_names = [county['name'] for county in counties.values()]\n",
-    "# county_rates = [unemployment[county_id] for county_id in counties]\n",
+    "county_rates = [unemployment[county_id] for county_id in counties]\n",
     "county_rates = unemployment\n",
     "color_mapper = LogColorMapper(palette=palette)\n",
     "\n",
@@ -169,18 +323,6 @@
    "outputs": [],
    "source": [
     "show(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rawtimeseries = pd.read_csv('https://coronadatascraper.com/timeseries.csv', parse_dates=['date'])\n",
-    "\n",
-    "display('Timeseries:')\n",
-    "display(rawtimeseries.head())"
    ]
   },
   {
